--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                         <a href="/#menu">Our Menu</a>
                     </li>
                     <li>
-                        <a href="/hours.html">Store Hours</a>
+                        <a href="hours.html">Store Hours</a>
                     </li>
                 </ul>
             </nav>
