--- a/hours.html
+++ b/hours.html
@@ -17,10 +17,10 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="/#about">About LTS</a>
+                        <a href="#about">About LTS</a>
                     </li>
                     <li>
-                        <a href="/#menu">Our Menu</a>
+                        <a href="#menu">Our Menu</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact Us</a>
