--- a/hours.html
+++ b/hours.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/index.html">Home</a>
+                        <a href="#">Home</a>
                     </li>
                     <li>
                         <a href="index.html/#about">About LTS</a>
