--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="index.html/#about">About <abbr title="Little Taco Shop">LTS</abbr></a>
+                        <a href="index.html#about">About <abbr title="Little Taco Shop">LTS</abbr></a>
                     </li>
                     <li>
-                        <a href="index.html/#menu">Our Menu</a>
+                        <a href="index.html#menu">Our Menu</a>
                     </li>
                     <li>
                         <a href="hours.html">Store Hours</a>
